autoscaler/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-autoscaler
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: autoscaler
    version: v1
    environment: autoscaler
    tier: fe
